<resources>
    <string name="app_name">CV App</string>
    <string name="name">Piotr Olech</string>
    <string name="phone_number">516 133 399</string>
    <string name="email_address">piotrolech@wp.pl</string>
    <string name="github_account">Github Account</string>
    <string name="linkedin_account">LinkedIn Account</string>
    <string name="curriculum_vitae">Curriculum Vitae</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>
    <string name="skills">Skills</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="hobby">Hobby</string>
    <string name="home">Home</string>
</resources>
